--- a/config/database.yml
+++ b/config/database.yml
@@ -1,21 +1,8 @@
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On Mac OS X with macports:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
 development:
   adapter: postgresql
   encoding: unicode
   database: hcmmw-new_development
+  host: localhost
   pool: 5
   username: root
   password: 594tyf
@@ -42,6 +29,7 @@ test:
   adapter: postgresql
   encoding: unicode
   database: hcmmw-new_test
+  host: localhost
   pool: 5
   username: root
   password: 594tyf
