--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   adapter: postgresql
   encoding: unicode
   database: hcmmw-new_test
@@ -33,3 +33,6 @@ test:
   pool: 5
   username: root
   password: 594tyf
+
+cucumber:
+  <<: *test
